--- a/gobierno_de_calle/view/gobiernodecalle_view.xml
+++ b/gobierno_de_calle/view/gobiernodecalle_view.xml
@@ -61,7 +61,7 @@ PROYECTOS
             <field name="name">gdc.proyectos.tree</field>
             <field name="model">gdc.proyectos</field>
             <field name="arch" type="xml">
-                <tree string="Course Tree">
+                <tree string="Proyectos">
                     <field name="codigo" />
                     <field name="actividad" />
                     <field name="supervisor_id"/>
@@ -116,14 +116,14 @@ PROYECTOS
                                     <label for="address_id" string="Lugar"/>
                                        <div>
                                            <field name="address_id" on_change="on_change_address_id(address_id)" />
-                                           <field name="street" placeholder="Street..."/>
-                                           <field name="street2"/>
+                                           <field name="street" placeholder="Direccion..."/>
+                                           <field name="street2" placeholder="Cont. Direccion..."/>
                                            <div class="address_format">
-                                               <field name="city" placeholder="City" style="width: 40%%"/>
-                                               <field name="state_id" class="oe_no_button" placeholder="State" style="width: 37%%" options='{"no_open": true}'/>
-                                               <field name="zip" placeholder="ZIP" style="width: 20%%"/>
+                                               <field name="city" placeholder="Ciudad" style="width: 40%%"/>
+                                               <field name="state_id" class="oe_no_button" placeholder="Estado" style="width: 37%%" options='{"no_open": true}'/>
+                                               <field name="zip" placeholder="Codigo Postal" style="width: 20%%"/>
                                            </div>    
-                                           <field name="country_id" placeholder="Country" class="oe_no_button" options='{"no_open": true}'/>
+                                           <field name="country_id" placeholder="Pais" class="oe_no_button" options='{"no_open": true}'/>
                                        </div>
                                 </group>
                                 <group>
