--- a/gobierno_de_calle/view/gobiernodecalle_view.xml
+++ b/gobierno_de_calle/view/gobiernodecalle_view.xml
@@ -206,7 +206,7 @@ FASES
             <field name="name">Fases</field>
             <field name="res_model">gdc.fases</field>
             <field name="view_type">form</field>
-            <field name="view_mode">tree,calendar,gantt</field>
+            <field name="view_mode">tree,form,calendar,gantt</field>
             <field name="help" type="html">
             </field>
         </record>
@@ -218,10 +218,58 @@ FASES
                 <tree string="Fases">
                     <field name="proyect_id" />
                     <field name="name_fase" />
+                    <field name="responsible_id" />
                     <field name="date_start_fase"/>
                     <field name="date_end_fase"/>
                     <field name="progreso_fase" />
                 </tree>
+            </field>
+        </record>
+        
+        <record model="ir.ui.view" id="fases_form_view">
+            <field name="name">gdc.fases.form</field>
+            <field name="model">gdc.fases</field>
+            <field name="arch" type="xml">
+                <form string="Fases" version="7.0">
+                    <group>
+                        <group>
+                            <field name="proyect_id" />
+                            <field name="name_fase" />
+                            <field name="responsible_id" />
+                        </group>
+                        <group>
+                            <field name="date_start_fase"/>
+                            <field name="date_end_fase"/>
+                            <field name="progreso_fase" />
+                        </group>
+                    </group>
+                    <notebook>
+                        <page string="Descripcion">
+                            <field name="description" placeholder="Agregar descripcion..."/>
+                        </page>
+                        <page string="Entes ejecutantes asignados" name="team">
+                            <group>
+                                <field colspan="4" name="members" widget="many2many_kanban">
+                                    <kanban quick_create="false" create="true" delete="true">
+                                        <field name="name"/>
+                                        <templates>
+                                            <t t-name="kanban-box">
+                                                <div style="position: relative">
+                                                    <a t-if="! read_only_mode" type="delete" style="position: absolute; right: 0; padding: 4px; diplay: inline-block">X</a>
+                                                    <div class="oe_module_vignette">
+                                                        <div class="oe_module_desc">
+                                                            <field name="name"/>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </t>
+                                        </templates>
+                                    </kanban>
+                                </field>
+                            </group>
+                        </page>
+                    </notebook>
+                </form>
             </field>
         </record>
 
@@ -254,7 +302,7 @@ TAREAS
             <field name="name">Tareas</field>
             <field name="res_model">gdc.tareas</field>
             <field name="view_type">form</field>
-            <field name="view_mode">tree,calendar,gantt</field>
+            <field name="view_mode">tree,form,calendar,gantt</field>
             <field name="help" type="html">
             </field>
         </record>
@@ -266,10 +314,58 @@ TAREAS
                 <tree string="Tareas">
                     <field name="fases_id" />
                     <field name="name_tarea" />
+                    <field name="responsible_id" />
                     <field name="date_start_tarea"/>
                     <field name="date_end_tarea"/>
                     <field name="progreso_tarea" />
                 </tree>
+            </field>
+        </record>
+
+        <record model="ir.ui.view" id="tareas_form_view">
+            <field name="name">gdc.tareas.form</field>
+            <field name="model">gdc.tareas</field>
+            <field name="arch" type="xml">
+                <form string="Tareas" version="7.0">
+                    <group>
+                        <group>
+                            <field name="fases_id" />
+                            <field name="name_tarea" />
+                            <field name="responsible_id" />
+                        </group>
+                        <group>
+                            <field name="date_start_tarea"/>
+                            <field name="date_end_tarea"/>
+                            <field name="progreso_tarea" />
+                        </group>
+                    </group>
+                    <notebook>
+                        <page string="Descripcion">
+                            <field name="description" placeholder="Agregar descripcion..."/>
+                        </page>
+                        <page string="Entes ejecutantes asignados" name="team">
+                            <group>
+                                <field colspan="4" name="members" widget="many2many_kanban">
+                                    <kanban quick_create="false" create="true" delete="true">
+                                        <field name="name"/>
+                                        <templates>
+                                            <t t-name="kanban-box">
+                                                <div style="position: relative">
+                                                    <a t-if="! read_only_mode" type="delete" style="position: absolute; right: 0; padding: 4px; diplay: inline-block">X</a>
+                                                    <div class="oe_module_vignette">
+                                                        <div class="oe_module_desc">
+                                                            <field name="name"/>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </t>
+                                        </templates>
+                                    </kanban>
+                                </field>
+                            </group>
+                        </page>
+                    </notebook>
+                </form>
             </field>
         </record>
 
