--- a/gobierno_de_calle/view/res_partner_view.xml
+++ b/gobierno_de_calle/view/res_partner_view.xml
@@ -2,36 +2,36 @@
     <openerp>
         <data>
 
-            <record model="ir.actions.act_window" id="contact_list_action">
-                <field name="name">Contacts</field>
+            <record model="ir.actions.act_window" id="partner_list_action">
+                <field name="name">Lugares a atender</field>
                 <field name="res_model">res.partner</field>
                 <field name="view_type">form</field>
+                <field name="domain">[('category_id.name','ilike','Lugar')]</field>
                 <field name="view_mode">tree,form</field>
             </record>
             
-            <record model="ir.ui.view" id="partner_locacion_form_view">
-                <field name="name">partner.locacion</field>
+            <record model="ir.ui.view" id="partner_gdc_form_view">
+                <field name="name">partner.gdc</field>
                 <field name="model">res.partner</field>
                 <field name="inherit_id" ref="base.view_partner_form" />
                 <field name="arch" type="xml">
-                    <field name="is_company" position="before">
-                        <field name="locacion" />
-                        <label for="locacion" string="Es un lugar?" />
+                    <field name="email" position="before">
+                        <field name="twitter" />
                     </field>
                 </field>
             </record>
             
-            <record model="ir.actions.act_window" id="contact_cat_list_action">
+            <record model="ir.actions.act_window" id="category_list_action">
                 <field name="name">Contact tags</field>
                 <field name="res_model">res.partner.category</field>
                 <field name="view_type">form</field>
                 <field name="view_mode">tree,form</field>
             </record>
             
-            <menuitem id="configuration_menu" name="Configuration" parent="main_gobiernodecalle_menu"/>
-            <menuitem id="sector_menu" name="Sectores" parent="configuration_menu" action="sector_list_action"/>
-            <menuitem id="contact_menu" name="Contactos" parent="configuration_menu" action="contact_list_action"/>
-            <menuitem id="contact_cat_menu" name="Etiquetas" parent="configuration_menu" action="contact_cat_list_action" />
+            <menuitem id="configuration_menu" name="Configuration" parent="main_gobiernodecalle_menu" sequence="10"/>
+            <menuitem id="sector_menu" name="Sectores" parent="configuration_menu" action="sector_list_action" sequence="4"/>
+            <menuitem id="contact_menu" name="Lugares a atender" parent="configuration_menu" action="partner_list_action" sequence="7"/>
+            <menuitem id="contact_cat_menu" name="Etiquetas" parent="configuration_menu" action="category_list_action" sequence="5"/>
 
         </data>
     </openerp>
