--- a/gobierno_de_calle/view/gobiernodecalle_view.xml
+++ b/gobierno_de_calle/view/gobiernodecalle_view.xml
@@ -62,6 +62,7 @@ PROYECTOS
             <field name="model">gdc.proyectos</field>
             <field name="arch" type="xml">
                 <tree string="Proyectos" colors="red:estado in ('Propuesto', 'Vencido');blue:estado in ('Planificacion', 'Progreso');green:estado=='Terminado';gray:estado in ('Archivado', 'Plantilla');orange:estado=='Congelado'">
+                    <field name="date_created" />
                     <field name="codigo" />
                     <field name="actividad" />
                     <field name="supervisor_id"/>
@@ -73,6 +74,7 @@ PROYECTOS
                     <field name="date_end"/>
                     <field name="estado"/>
                     <field name="progreso"/>
+                    <field name="dias_proyecto"/>
                 </tree>
             </field>
         </record>
@@ -89,6 +91,7 @@ PROYECTOS
                             <field name="actividad" string="Actividad"/>
                         </group>
                         <group>
+                            <field name="date_created" readonly="1"/>
                             <field name="codigo" readonly="1"/>
                         </group>
                         <group>
@@ -100,10 +103,11 @@ PROYECTOS
                         </group>
                         <group>
                             <field name="priority"/>
-                            <field name="date_start"/>
-                            <field name="date_end"/>
+                            <field name="date_start" on_change="onchange_date_start(date_start)"/>
+                            <field name="date_end" on_change="onchange_date_end(date_end)"/>
                             <field name="estado"/>
                             <field name="progreso" readonly="1"/>
+                            <field name="dias_proyecto" readonly="1"/>
                         </group>
                     </group>
                     <notebook>
@@ -152,20 +156,11 @@ PROYECTOS
                                 </field>
                             </group>
                         </page>
-                        <page string="Fases">
-                            <field name="fases_ids" nolabel="1" colspan="4" mode="tree">
-                                <tree string="Fases">
-                                    <field name="proyect_id"/>
-                                    <field name="date_start_fase"/>
-                                    <field name="date_end_fase"/>
-                                    <field name="progreso_fase"/>
-                                </tree>
-                            </field>
-                        </page>
                         <page string="Tareas">
                             <field name="tareas_ids" nolabel="1" colspan="4" mode="tree">
                                 <tree string="Tareas">
-                                    <field name="fases_id"/>
+                                    <field name="project_id"/>
+                                    <field name="name_tarea" />
                                     <field name="date_start_tarea"/>
                                     <field name="date_end_tarea"/>
                                     <field name="progreso_tarea"/>
@@ -199,108 +194,6 @@ PROYECTOS
         </record>
 
 <!--
-FASES
--->
-
-        <record model="ir.actions.act_window" id="fases_list_action">
-            <field name="name">Fases</field>
-            <field name="res_model">gdc.fases</field>
-            <field name="view_type">form</field>
-            <field name="view_mode">tree,form,calendar,gantt</field>
-            <field name="help" type="html">
-            </field>
-        </record>
-
-        <record model="ir.ui.view" id="fases_tree_view">
-            <field name="name">gdc.fases.tree</field>
-            <field name="model">gdc.fases</field>
-            <field name="arch" type="xml">
-                <tree string="Fases">
-                    <field name="proyect_id" />
-                    <field name="name_fase" />
-                    <field name="responsible_id" />
-                    <field name="date_start_fase"/>
-                    <field name="date_end_fase"/>
-                    <field name="progreso_fase" />
-                </tree>
-            </field>
-        </record>
-        
-        <record model="ir.ui.view" id="fases_form_view">
-            <field name="name">gdc.fases.form</field>
-            <field name="model">gdc.fases</field>
-            <field name="arch" type="xml">
-                <form string="Fases" version="7.0">
-                    <group>
-                        <group>
-                            <field name="proyect_id" />
-                            <field name="name_fase" />
-                            <field name="responsible_id" />
-                        </group>
-                        <group>
-                            <field name="date_start_fase"/>
-                            <field name="date_end_fase"/>
-                            <field name="progreso_fase" />
-                        </group>
-                    </group>
-                    <notebook>
-                        <page string="Descripcion">
-                            <field name="description" placeholder="Agregar descripcion..."/>
-                        </page>
-                        <page string="Entes ejecutantes asignados" name="team">
-                            <group>
-                                <field colspan="4" name="members" widget="many2many_kanban">
-                                    <kanban quick_create="false" create="true" delete="true">
-                                        <field name="name"/>
-                                        <templates>
-                                            <t t-name="kanban-box">
-                                                <div style="position: relative">
-                                                    <a t-if="! read_only_mode" type="delete" style="position: absolute; right: 0; padding: 4px; diplay: inline-block">X</a>
-                                                    <div class="oe_module_vignette">
-                                                        <div class="oe_module_desc">
-                                                            <field name="name"/>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </t>
-                                        </templates>
-                                    </kanban>
-                                </field>
-                            </group>
-                        </page>
-                        <page string="Subida de informe">
-                            <field name="informe_fases"/>
-                        </page>
-                        <page string="Subida de imagenes">
-                            <field name="image" widget='image'/>
-                        </page>
-                    </notebook>
-                </form>
-            </field>
-        </record>
-
-        <record id="view_fases_gantt" model="ir.ui.view">
-            <field name="name">gdc.fases.gantt</field>
-            <field name="model">gdc.fases</field>
-            <field eval="2" name="priority"/>
-            <field name="arch" type="xml">
-                <gantt date_start="date_start_fase" date_stop="date_end_fase" string="Fases">
-                </gantt>
-            </field>
-        </record>
-
-        <record id="view_fases_calendar" model="ir.ui.view">
-            <field name="name">gdc.fases.calendar</field>
-            <field name="model">gdc.fases</field>
-            <field eval="2" name="priority"/>
-            <field name="arch" type="xml">
-                <calendar color="name_fase" date_start="date_start_fase" date_stop="date_end_fase" string="Fases">
-                    <field name="name_fase"/>
-                </calendar>
-            </field>
-        </record>
-
-<!--
 TAREAS
 -->
 
@@ -318,7 +211,7 @@ TAREAS
             <field name="model">gdc.tareas</field>
             <field name="arch" type="xml">
                 <tree string="Tareas">
-                    <field name="fases_id" />
+                    <field name="project_id" />
                     <field name="name_tarea" />
                     <field name="responsible_id" />
                     <field name="date_start_tarea"/>
@@ -335,11 +228,8 @@ TAREAS
                 <form string="Tareas" version="7.0">
                     <group>
                         <group>
-                            <field name="fases_id" />
+                            <field name="project_id" />
                             <field name="name_tarea" />
-                            <field name="responsible_id" />
-                        </group>
-                        <group>
                             <field name="date_start_tarea"/>
                             <field name="date_end_tarea"/>
                             <field name="progreso_tarea" />
@@ -404,9 +294,8 @@ TAREAS
 
         <menuitem id="main_gobiernodecalle_menu" name="Gobierno de calle" sequence="120"/>
 
-        <menuitem id="proyectos_menu" name="Proyectos" parent="main_gobiernodecalle_menu" sequence="10"/>
+        <menuitem id="proyectos_menu" name="Gobierno de Calle" parent="main_gobiernodecalle_menu" sequence="10"/>
         <menuitem id="asigancion_menu" name="Asignacion" parent="proyectos_menu" action="proyectos_list_action" sequence="1"/>
-        <menuitem id="fase_menu" name="Fases" parent="proyectos_menu" action="fases_list_action" sequence="2"/>
         <menuitem id="tareas_menu" name="Tareas" parent="proyectos_menu" action="tareas_list_action" sequence="3"/>
         
     </data>
