--- a/gobierno_de_calle/view/gobiernodecalle_view.xml
+++ b/gobierno_de_calle/view/gobiernodecalle_view.xml
@@ -137,7 +137,7 @@ PROYECTOS
                         </page>
                         <page string="Entes ejecutantes asignados" name="team">
                             <group>
-                                <field colspan="4" name="members" widget="many2many_kanban">
+                                <field colspan="4" name="members_project" widget="many2many_kanban">
                                     <kanban quick_create="false" create="true" delete="true">
                                         <field name="name"/>
                                         <templates>
@@ -159,7 +159,6 @@ PROYECTOS
                         <page string="Tareas">
                             <field name="tareas_ids" nolabel="1" colspan="4" mode="tree">
                                 <tree string="Tareas">
-                                    <field name="project_id"/>
                                     <field name="name_tarea" />
                                     <field name="date_start_tarea"/>
                                     <field name="date_end_tarea"/>
@@ -211,7 +210,7 @@ TAREAS
             <field name="model">gdc.tareas</field>
             <field name="arch" type="xml">
                 <tree string="Tareas">
-                    <field name="project_id" />
+                    <field name="project_id2" />
                     <field name="name_tarea" />
                     <field name="responsible_id" />
                     <field name="date_start_tarea"/>
@@ -228,7 +227,7 @@ TAREAS
                 <form string="Tareas" version="7.0">
                     <group>
                         <group>
-                            <field name="project_id" />
+                            <field name="project_id2" />
                             <field name="name_tarea" />
                             <field name="date_start_tarea"/>
                             <field name="date_end_tarea"/>
@@ -241,7 +240,7 @@ TAREAS
                         </page>
                         <page string="Entes ejecutantes asignados" name="team">
                             <group>
-                                <field colspan="4" name="members" widget="many2many_kanban">
+                                <field colspan="4" name="members_tareas" widget="many2many_kanban">
                                     <kanban quick_create="false" create="true" delete="true">
                                         <field name="name"/>
                                         <templates>
