--- a/gobierno_de_calle/view/gobiernodecalle_view.xml
+++ b/gobierno_de_calle/view/gobiernodecalle_view.xml
@@ -89,25 +89,25 @@ PROYECTOS
                     <group>
                         <group>
                             <field name="actividad" string="Actividad"/>
+                             <field name="cobertura"/>
                         </group>
                         <group>
                             <field name="date_created" readonly="1"/>
                             <field name="codigo" readonly="1"/>
                         </group>
                         <group>
-                            <field name="cobertura"/>
                             <field name="supervisor_id" domain="[('category_id.name','ilike','Supervisor')]"/>
                             <field name="responsible_id" domain="[('category_id.name','ilike','Responsable')]"/>
+                            <field name="priority"/>
                             <field name="presu_tentativo"/>
                             <field name="presu_real"/>
                         </group>
                         <group>
-                            <field name="priority"/>
                             <field name="date_start" on_change="onchange_date_start(date_start)"/>
                             <field name="date_end" on_change="onchange_date_end(date_end)"/>
+                            <field name="dias_proyecto" readonly="1"/>
                             <field name="estado"/>
                             <field name="progreso" readonly="1"/>
-                            <field name="dias_proyecto" readonly="1"/>
                         </group>
                     </group>
                     <notebook>
@@ -165,6 +165,15 @@ PROYECTOS
                                     <field name="progreso_tarea"/>
                                 </tree>
                             </field>
+                        </page>
+                        <page string="Incidencias">
+                            <field name="incidencias"/>
+                        </page>
+                        <page string="Conclusiones">
+                            <field name="conclusiones"/>
+                        </page>
+                        <page string="Acuerdos">
+                            <field name="acuerdos"/>
                         </page>
                     </notebook>
                 </form>
@@ -291,9 +300,9 @@ TAREAS
             </field>
         </record>
 
-        <menuitem id="main_gobiernodecalle_menu" name="Gobierno de calle" sequence="120"/>
+        <menuitem id="main_gobiernodecalle_menu" name="Gobierno de calle y Direccionalidad" sequence="120"/>
 
-        <menuitem id="proyectos_menu" name="Gobierno de Calle" parent="main_gobiernodecalle_menu" sequence="10"/>
+        <menuitem id="proyectos_menu" name="Actividades" parent="main_gobiernodecalle_menu" sequence="10"/>
         <menuitem id="asigancion_menu" name="Asignacion" parent="proyectos_menu" action="proyectos_list_action" sequence="1"/>
         <menuitem id="tareas_menu" name="Tareas" parent="proyectos_menu" action="tareas_list_action" sequence="3"/>
         
